--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "uuid": "8.3.2",
-    "zustand": "^3.6.5"
+    "zustand": "3.6.5"
   },
   "devDependencies": {
     "@types/node": "16.11.11",
