--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "17.0.2",
     "react-final-form": "6.5.7",
     "uuid": "8.3.2",
-    "zustand": "3.6.5"
+    "zustand": "3.6.5",
+    "zustand-persist": "0.4.0"
   },
   "devDependencies": {
     "@types/node": "16.11.11",
